--- a/index.html
+++ b/index.html
@@ -5,41 +5,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>貸款計算機</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-    <h1>貸款計算機</h1>
-    <form action=""></form>
-    <label for="amount">貸款金額</label>
-    <input type="number" name="amount" id="amount" value="10">萬
-    <br>
-    <label for="amount">貸款年限</label>
-    <select name="years" id="years">
-        <option value="1">1年</option>
-        <option value="3">3年</option>
-        <option value="5" selected>5年</option>
-        <option value="4">7年</option>
-        <option value="10">10年</option>
-        <option value="20">20年</option>
-        <option value="30">30年</option>
-    </select>
-    <br>
-    <label for="amount">貸款利率</label>
-    <input type="number" step="0.1 " name="rare" id="rate" value="2">%
-    <br>
-    <input type="checkbox" name="fee" id="fee" checked>手續費(5000)
-    <br>
-    <label for="">計算方式</label>
-    <input type="radio" name="reqpayment" id="paymenet1" checked>本金攤還
-    <input type="radio" name="reqpayment" id="paymenet2">本息攤還
-    <br>
-    <button type="button">計算</button>
-    <button type="button">重置</button>
+    <div id="container">
+        <h1>貸款計算機</h1>
+        <form action="">
+            <div id="info">
+                <label for="amount">貸款金額</label>
+                <input type="number" name="amount" id="amount" value="10"> 萬
+                <br>
+                <label for="amount">貸款年限</label>
+                <select name="years" id="years">
+                    <option value="1">1年</option>
+                    <option value="3">3年</option>
+                    <option value="5" selected>5年</option>
+                    <option value="4">7年</option>
+                    <option value="10">10年</option>
+                    <option value="20">20年</option>
+                    <option value="30">30年</option>
+                </select>
+                <br>
+                <label for="amount">貸款利率</label>
+                <input type="number" step="0.1 " name="rate" id="rate" value="2"> %
+                <br>
+                <input type="checkbox" name="fee" id="fee" checked>手續費(5000)
+                <br>
+                <div id="calcRule">
+                    <label for="">計算方式</label>
+                    <input type="radio" name="reqpayment" id="paymenet1" checked>本金攤還
+                    <input type="radio" name="reqpayment" id="paymenet2">本息攤還
+                    <br>
+                </div>
+            </div>
+            <br>
+            <button type="button" id="calc">計算</button>
+            <button type="button" id="reset">重置</button>
+        </form>
 
 
 
-
-
+    </div>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
