--- a/index.html
+++ b/index.html
@@ -50,7 +50,23 @@
             總支出利息:
             <div class="totalInterest"></div>
         </div>
+        <br>
         <div id="table">
+            <table>
+                <thead>
+                    <tr>
+                        <th>期別</th>
+                        <th>本金</th>
+                        <th>利息</th>
+                        <th>本利和</th>
+                        <th>餘額</th>
+
+                    </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
 
         </div>
 
